--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,7 @@
+192.168.1.1
+192.168.1.2
+192.168.1.3
+
 [web]
 172.31.41.78
 
@@ -8,4 +12,21 @@
 COURSE="Ansible"
 DURATION="120HRS"
 TRAINER="Sony"
+
+[backend]
+192.168.1.4
+192.168.1.5
+192.168.1.6
+
+[mysql]
+192.168.1.7
+192.168.1.8
+192.168.1.9
+
+[servers:children]
+web
+backend
+
+[local]
+localhost
 
