--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -4,4 +4,4 @@
   tasks:
   - name: print the default variable
     ansible.builtin.debug:
-      msg: "Hello {{ COURSE }}"
+      msg: "Hello {{ course | default('Ansible') }}"
