--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -18,4 +18,10 @@
       greeting: "Hello Ramesh"
     ansible.builtin.debug:
       msg: "{{ greeting | lower }}"
+
+  - name: get the unique values
+    vars:
+      numbers: [1,2,3,4,6,4,3,8,1]
+    ansible.builtin.debug:
+      msg: "{{ numbers | unique }}"
  
