--- a/21-create-ec2-r53.yaml
+++ b/21-create-ec2-r53.yaml
@@ -3,8 +3,8 @@
   connections: local
   vars:
     subnet_id: subnet-0ead42941ef2c3abd #replace with your subnet id
-    sg_id: sg-029a4ae8d5cdec217
-    ami_id: ami-09c813fb71547fc4f
+    sg_id: "sg-029a4ae8d5cdec217"
+    ami_id: "ami-09c813fb71547fc4f"
     instance:
     -mysql
     -backend
